--- a/Merchandise.html
+++ b/Merchandise.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navigation Bar --> 
      <nav class="navbar"> 
-         <a href="The Fauthian Theory.html">Home</a>                            
+         <a href="index.html">Home</a>                            
          <a href="Podcast.html">Podcasts</a>
          <a href="Merchandise.html">Merchandise</a>
          <a href="#">Contact</a> 
