--- a/Merchandise.html
+++ b/Merchandise.html
@@ -4,43 +4,69 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="Merchandise.css" rel="stylesheet">
+        <link href="Merchandise.css" rel="stylesheet">
 	<title>Merchandise</title>
 </head>
 <body>
+    <header><span class="auto-type"></span></header>
     <!-- Navigation Bar --> 
      <nav class="navbar"> 
-         <a href="index.html">Home</a>                            
+         <a href="The Fauthian Theory.html">Home</a> 
+         <a href="">About</a>                              
          <a href="Podcast.html">Podcasts</a>
          <a href="Merchandise.html">Merchandise</a>
-         <a href="#">Contact</a> 
+         <a href="what if.html">W.W.Y.D.?</a>
+         <a href="contact.html">Contact</a> 
          <a href="#">Donate</a>        
      </nav>
-    <!-- Merchndise -->
-    <h class="headerr">Merchandise</h>
+    <!-- Gallery 1 -->
+    <h class="headerr">Hoodies</h>
     <div class="gallery-wrap">
-    <img src="Images/right.png" id="backBtn">
+    <img src="Images/left.png" id="backBtn">
         <div class="gallery">
             <div>
-                <span><img src="Images/grce front person.png" alt=""></span>
                 <span><img src="Images/grace front.png" alt=""></span>
                 <span><img src="Images/grace back.png" alt=""></span>
+                <span><img src="Images/darkpinkfront.jpg" alt=""></span>
             </div>
             <div>
-                <span><img src="Images/pinkgraceperson.jpg" alt=""></span>
-                <span><img src="Images/pinkgraceback.jpg" alt=""></span>
-                <span><img src="Images/pinkgracefront.jpg" alt=""></span>
+                <span><img src="Images/darkpinkback.jpg" alt=""></span>
+                <span><img src="Images/greenfront.jpg" alt=""></span>
+                <span><img src="Images/greenback.jpg" alt=""></span>
             </div>
         </div>
         <img src="Images/right.png" id="nextBtn">
     </div>
+
+    <!-- Gallery 2 -->
+    <h class="headerr">Hats</h>
+    <div class="gallery-wrap">
+        
+            <div class="gallery2">
+                <div>
+                    <span><img src="Images/stonecap.jpg" alt=""></span>
+                    <span><img src="Images/pinkcap.jpg" alt=""></span>
+                    <span><img src="Images/bluecap.jpg" alt=""></span>
+                </div>
+                <div>
+                    <span><img src="Images/browncap.jpg" alt=""></span>
+                    <span><img src="Images/redcap.jpg" alt=""></span>
+                    <span><img src="Images/orangecap.jpg" alt=""></span>
+                </div>
+            </div>
+            
+        </div>
+
     <!-- Gallery Script -->
     <script>
         // Gallery 1
 	    let scrollContainer = document.querySelector(".gallery");
 	    let backBtn = document.getElementById("backBtn");
 	    let nextBtn = document.getElementById("nextBtn");
-
+	    // Gallery 2
+	    let scrollContainer2 = document.querySelector(".gallery2");
+	    let backBtn2 = document.getElementById("backBtn2");
+	    let nextBtn2 = document.getElementById("nextBtn2");
         // Gallery 1
 	    scrollContainer.addEventListener("wheel", (evt) => {
 		    evt.preventDefault();
@@ -52,6 +78,28 @@
 	    backBtn.addEventListener("click", ()=>{
     	    scrollContainer.scrollLeft -= 900;
 	    });
+
+        // Gallery 2
+	    scrollContainer2.addEventListener("wheel", (evt) => {
+		    evt.preventDefault();
+		    scrollContainer2.scrollLeft += evt.deltaY;
+	    });
+	    nextBtn2.addEventListener("click", ()=>{
+    	    scrollContainer2.scrollLeft += 900;
+	    });
+	    backBtn2.addEventListener("click", ()=>{
+    	    scrollContainer2.scrollLeft -= 900;
+	    });
+
+    </script>
+    <!-- Auto Type Script -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script>
+
+        var typed = new Typed(".auto-type",{
+            strings: ["Merchandise."],
+            typeSpeed: 110
+        })
 
     </script>
 
