--- a/Podcast.html
+++ b/Podcast.html
@@ -14,7 +14,7 @@
     <header><span class="auto-type"></span></header>
     <!-- Navigation Bar --> 
     <nav class="navbar"> 
-        <a href="The Fauthian Theory.html">Home</a>  
+        <a href="index.html">Home</a>  
         <a href="">About</a>                             
         <a href="Podcast.html">Podcasts</a>
         <a href="Merchandise.html">Merchandise</a>
