--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<a href="#">About</a>         
         <a href="Podcast.html">Podcasts</a>
         <a href="Merchandise.html">Merchandise</a>
+	<a href="what if.html">W.W.Y.D.?</a>    
         <a href="#">Contact</a> 
         <a href="#">Donate</a>
     </nav>
