--- a/Merchandise.html
+++ b/Merchandise.html
@@ -5,9 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="Merchandise.css" rel="stylesheet">
-	    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	    <link rel="apple-touch-icon" sizes="180x180" href="/green-apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/green-favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/green-favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
 	<title>Merchandise</title>
 </head>
@@ -109,6 +109,7 @@
 
 </body>
 </html>
+
 
 
 
