--- a/Podcast.html
+++ b/Podcast.html
@@ -8,9 +8,9 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link href="https://fontawesome.com/icons/discord?f=brands&s=solid" rel="stylesheet">
 	    <link href="The Fauthian Theory.css" rel="stylesheet">
-	    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	    <link rel="apple-touch-icon" sizes="180x180" href="/green-apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/green-favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/green-favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
 	<title>Podcast</title>
 </head>
@@ -91,4 +91,5 @@
    
 </body>
 </html>
+
 
