--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link href="The Fauthian Theory.css" rel="stylesheet">-->
+        <link href="The Fauthian Theory.css" rel="stylesheet">
 	   <link rel="apple-touch-icon" sizes="180x180" href="/green-apple-touch-icon.png"> 
         <link rel="icon" type="image/png" sizes="32x32" href="/green-favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/green-favicon-16x16.png">
@@ -82,6 +82,7 @@
        
 </body>
 </html>
+
 
 
 
